refactor and kafka